--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -148,10 +148,20 @@
   max-width: 60%;
 }
 
+/*container Player */
+
+.containerPlayer {
+  margin: 0 auto;
+  margin-top: 80px;
+  width: 80%;
+}
+
+/* container Info */
+
 .containerInfo {
   gap: 10px;
   margin: 0 auto;
-  margin-top: 180px;
+  margin-top: 80px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -288,6 +298,18 @@
   font-size: 4rem;
   line-height: 1.1;
   font-weight: 700;
+  padding: 0px;
+  margin: 0px;
+  margin-top: 14px;
+  margin-bottom: 13px;
+}
+
+.containarPlans__price > .oldValue {
+  text-decoration-line: line-through;
+  color: red;
+  margin: 0px;
+  font-size: 2rem;
+  margin-top: 14px;
 }
 
 @keyframes pulse {
@@ -628,7 +650,6 @@
   padding-bottom: 10px;
 }
 
-
 .containerChannels__list > details > ul {
   display: flex;
   flex-wrap: wrap;
@@ -639,14 +660,14 @@
 }
 
 .containerChannels__list > details > ul > li {
-    width: 200px;
-    height: 300px;
-    border-radius: 1rem;
-    overflow: hidden;
-    border: 1px solid var(--TextColorMedium);
-  }
+  width: 200px;
+  height: 300px;
+  border-radius: 1rem;
+  overflow: hidden;
+  border: 1px solid var(--TextColorMedium);
+}
 
-.containerChannels__list > details > ul > li > img { 
+.containerChannels__list > details > ul > li > img {
   clip-path: inset(4px 4px 4px 4px);
 }
 
@@ -681,7 +702,7 @@
 }
 
 .containerChannels__list > .detailsqnt7[open] {
-  height: calc(300px * 2 + 100px)
+  height: calc(300px * 2 + 100px);
 }
 
 @keyframes channelsLeave {
@@ -701,23 +722,23 @@
 
 @media (max-width: 1465px) {
   .containerChannels__list > .detailsqnt5[open] {
-    height: calc(300px * 2.2 + 100px)
+    height: calc(300px * 2.2 + 100px);
   }
 }
 
 @media (max-width: 1150px) {
   .containerChannels__list > .detailsqnt4[open] {
-    height: calc(300px * 2 + 100px)
+    height: calc(300px * 2 + 100px);
   }
 
   .containerChannels__list > .detailsqnt7[open] {
-    height: calc(300px * 3.2 + 100px)
+    height: calc(300px * 3.2 + 100px);
   }
 }
 
 @media (max-width: 882px) {
   .containerChannels__list > .detailsqnt5[open] {
-    height: calc(300px * 3.2 + 100px)
+    height: calc(300px * 3.2 + 100px);
   }
 }
 
@@ -728,38 +749,37 @@
   }
 
   .containerChannels__list > details > ul {
-   gap: 20px;
+    gap: 20px;
   }
 
   .containerChannels__list > .detailsqnt7[open] {
-    height: calc(300px * 4.2 + 100px)
+    height: calc(300px * 4.2 + 100px);
   }
 }
 
 @media (max-width: 580px) {
-
   .containerChannels__list > details > ul {
     width: 80%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 20px;
-   }
+  }
 
   .containerChannels__list > .detailsqnt2[open] {
-    height: calc(300px * 2.2 + 100px)
+    height: calc(300px * 2.2 + 100px);
   }
-   
+
   .containerChannels__list > .detailsqnt4[open] {
-    height: calc(300px * 4.2 + 100px)
+    height: calc(300px * 4.2 + 100px);
   }
 
   .containerChannels__list > .detailsqnt5[open] {
-    height: calc(300px * 5.2 + 100px)
+    height: calc(300px * 5.2 + 100px);
   }
 
   .containerChannels__list > .detailsqnt7[open] {
-    height: calc(300px * 7.4 + 100px)
+    height: calc(300px * 7.4 + 100px);
   }
 }
 
@@ -1234,6 +1254,18 @@
     font-size: 1.8rem;
     line-height: 2rem;
   }
+}
+
+/* Player Rating */
+.containerPlayerRating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  margin: 0 auto;
+  margin-top: 80px;
+  width: 80%;
 }
 
 /* FAQ */
