--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -152,7 +152,7 @@
 
 .containerPlayer {
   margin: 0 auto;
-  margin-top: 80px;
+  margin-top: 140px;
   width: 80%;
 }
 
@@ -231,6 +231,30 @@
     font-size: 1rem;
     line-height: 1.5rem;
   }
+}
+
+/* 4 benefícios */
+.ContainerProductBenefits{
+  width: 80%;
+  margin: 0 auto;
+}
+
+.ContainerProductBenefits > h2 {
+  text-align: center;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  font-size: 3.375rem;
+  line-height: 5.25rem;
+  font-weight: 600;
+  letter-spacing: -1px;
+}
+
+.ContainerProductBenefits__list{
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Planos */
@@ -1261,11 +1285,33 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   gap: 20px;
   margin: 0 auto;
   margin-top: 80px;
   width: 80%;
+}
+
+.containerPlayerRating__list{
+  display: flex;
+  width: 100%;
+  gap: 20px;
+}
+
+.containerPlayerRating__item{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: flex-start;
+  background-color: hsla(0, 0%, 100%, 0.05);
+  width: calc(100% / 3);
+  padding: 20px;
+  border-radius: 1rem;
+  height: fit-content;
+}
+
+.containerPlayerRating__title > h2 {
+  font-size: 2rem;
+  line-height: 2rem;
 }
 
 /* FAQ */
@@ -1505,6 +1551,7 @@
   font-size: 0.9rem;
   padding: 0px;
   margin: 0px;
+
 }
 
 .containerNews__logo {
@@ -1522,12 +1569,20 @@
     line-height: 2.5rem;
   }
 
+  
+
   .containerNews__list {
     width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 40px;
+    padding: 0px;
+    gap: 60px;
+  }
+
+  .containerNews__list > li {
+    text-align: center;
+    width: 100%;
   }
 }
 
@@ -1536,6 +1591,7 @@
     font-size: 1.6rem;
     line-height: 2.5rem;
   }
+
 }
 
 /* footer */
