--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -265,7 +265,8 @@
   margin-top: 40px;
 }
 
-.ContainerProductBenefits__item-primary > h2, .ContainerProductBenefits__item-secondary > h2 {
+.ContainerProductBenefits__item-primary > h2,
+.ContainerProductBenefits__item-secondary > h2 {
   text-shadow: 0 0 5px #2ea82f, 0 0 10px #2ea82f, 0 0 15px #2ea82f,
     0 0 20px #2ea82f, 0 0 25px #2ea82f, 0 0 30px #2ea82f, 0 0 35px #2ea82f;
 }
@@ -1428,7 +1429,6 @@
     font-size: 1.8rem;
     line-height: 2rem;
   }
-
 }
 
 /* FAQ */
@@ -1664,7 +1664,7 @@
   border-radius: 1rem;
 }
 
-.containerNews__list > li > img{
+.containerNews__list > li > img {
   margin-bottom: 20px;
 }
 
@@ -1729,7 +1729,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   margin: 0 auto;
 }
 
@@ -1737,7 +1737,9 @@
   width: 50%;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   gap: 10px;
+  margin-bottom: 25px;
 }
 
 .containerFooter__logo > img {
@@ -1760,6 +1762,7 @@
   width: 50%;
   justify-content: flex-end;
   align-items: flex-end;
+
 }
 
 .containerFooter__list > li {
@@ -1767,6 +1770,7 @@
   flex-direction: column;
   text-align: center;
   gap: 5px;
+  height: 110px;
 }
 
 .containerFooter__list > li > a {
@@ -1798,12 +1802,44 @@
   margin-bottom: 40px;
 }
 
+.containerFooter__love{
+  display: flex;
+  width: 100%;
+  text-align: left;
+  align-items: flex-start;
+  justify-items: flex-start;
+  height: 40px;
+}
+
+.containerFooter__love > span {
+  font-size: 0.7em;
+  gap: 10px;
+  line-height: 1.25;
+  color: hsla(0, 0%, 100%, 0.5);
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.containerFooter__love > span > img {
+  width: 20%;
+  width: 20px;
+  height: auto;
+}
+
 @media (max-width: 768px) {
   .containerCopyrigth {
     margin-top: 20px;
     width: 100%;
     align-items: center;
     justify-content: center;
+  }
+
+  .containerFooter__logo{
+    margin-bottom: 8px;
   }
 }
 
@@ -1839,6 +1875,12 @@
     align-items: center;
     text-align: center;
   }
+
+  .containerFooter__love{
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
 }
 
 @media (max-width: 425px) {
@@ -1848,5 +1890,9 @@
     justify-content: center;
     align-items: center;
     padding: 0px;
+  }
+
+  .containerFooter__love{
+    margin-top: 80px;
   }
 }
