--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -681,6 +681,111 @@
   }
 }
 
+
+/* Safety */
+
+.containerSafety{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.containerSafety__title {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+margin: 0px;
+}
+
+.containerSafety__title > h2{
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  font-size: 2rem;
+  line-height: 2.25rem;
+  font-weight: 600;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.containerSafety__title > img{
+  height: auto;
+  width: 100%;
+  border-radius: 1rem;
+}
+
+.containerSafety__info{
+  width: 50%;
+  max-height: 650px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.containerSafety__info > .containerSafety__info-text > h2 > span{
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  font-size: 2.5rem;
+  line-height: 1.5rem;
+  font-weight: 600;
+}
+
+.containerSafety__info > .containerSafety__info-text > h2{
+  font-weight: normal;
+  font-size: 2rem;
+  line-height: 2rem;
+  margin: 10px
+}
+
+.containerSafety__info-text > p{
+  font-weight: normal;
+  color: var(--TextColorMedium);
+  padding: 0px;
+  margin: 0px;
+}
+
+.containerSafety__info > .containerSafety__list{
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+
+
+.containerSafety__list > .containerSafety__item{
+  width: 40%;
+  border: 1px solid white;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  text-align: center;
+}
+
+.containerSafety__item > p > span {
+  color: red;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .containerSafety{
+    flex-direction: column;
+  }
+
+  
+.containerSafety__title {
+  width: 100%;
+}
+
+.containerSafety__info{
+  width: 100%;
+}
+}
+
 /* Family */
 
 .containerFamily {
@@ -1267,9 +1372,10 @@
 .containerUserRating__item {
   display: flex;
   flex-direction: column;
-  gap: 100px;
-  align-items: flex-start;
-  height: auto;
+  gap: 20px;
+  align-items: center;
+  height: fit-content;
+  min-height: 610px;
   background-color: hsla(0, 0%, 100%, 0.05);
   width: calc(100% / 3);
   padding: 20px;
@@ -1283,7 +1389,8 @@
   align-items: flex-start;
   justify-content: left;
   gap: 5px;
-  height: 60%;
+  height: fit-content;
+  min-height: 280px;
 }
 
 .containerUserRating__title > img {
@@ -1734,7 +1841,7 @@
 }
 
 .containerFooter__logo {
-  width: 50%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -1759,10 +1866,11 @@
   list-style: none;
   display: flex;
   gap: 20px;
-  width: 50%;
+  width: 65%;
   justify-content: flex-end;
   align-items: flex-end;
-
+  height: fit-content;
+  margin-bottom: 40px;
 }
 
 .containerFooter__list > li {
@@ -1824,13 +1932,32 @@
   justify-content: center;
 }
 
-.containerFooter__love > span > img {
-  width: 20%;
+
+
+.containerFooter__item{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.containerFooter__item > a > img{
+  max-width: 140px;
+  width: 100%;
+}
+
+.containerCopyrigth > span > img {
+
   width: 20px;
   height: auto;
 }
 
-@media (max-width: 768px) {
+.containerCopyrigth > .containerCopyrigth__item{
+  margin-bottom: 0px;
+}
+
+@media (max-width: 825px) {
   .containerCopyrigth {
     margin-top: 20px;
     width: 100%;
@@ -1843,37 +1970,48 @@
   }
 }
 
-@media (max-width: 672px) {
+@media (max-width: 825px) {
   .containerFooter__infos {
     flex-direction: column;
   }
 
   .containerFooter__list {
     width: 100%;
-    gap: 20%;
+    gap: 0px;
     padding: 0px;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .containerFooter__list > li {
+    width: 40%;
+    align-items: flex-start;
+    justify-items: flex-start;
+    height: fit-content;
   }
 
   .containerFooter__list > li > h2 {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   .containerFooter__list > li > a {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    text-align: left;
   }
 
   .containerFooter__logo {
     width: 100%;
-    text-align: center;
+    display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
   }
 
   .containerCopyrigth {
     justify-content: center;
     align-items: center;
     text-align: center;
+    flex-direction: column;
   }
 
   .containerFooter__love{
@@ -1887,12 +2025,8 @@
   .containerFooter__list {
     width: 100%;
     gap: 20px;
-    justify-content: center;
-    align-items: center;
     padding: 0px;
+    height: max-content;
   }
 
-  .containerFooter__love{
-    margin-top: 80px;
-  }
 }
