--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -681,10 +681,9 @@
   }
 }
 
-
 /* Safety */
 
-.containerSafety{
+.containerSafety {
   width: 80%;
   margin: 0 auto;
   display: flex;
@@ -693,13 +692,14 @@
 }
 
 .containerSafety__title {
-  width: 40%;
+  width: 45%;
   display: flex;
   flex-direction: column;
-margin: 0px;
+  margin: 0px;
+  min-height: 650px;
 }
 
-.containerSafety__title > h2{
+.containerSafety__title > h2 {
   margin-top: 0rem;
   margin-bottom: 0rem;
   font-size: 2rem;
@@ -709,20 +709,20 @@ margin: 0px;
   text-align: center;
 }
 
-.containerSafety__title > img{
-  height: auto;
+.containerSafety__title > img {
+  height: 100%;
   width: 100%;
   border-radius: 1rem;
 }
 
-.containerSafety__info{
-  width: 50%;
-  max-height: 650px;
+.containerSafety__info {
+  width: 60%;
+  max-height: fit-content;
   padding: 0px;
   margin: 0px;
 }
 
-.containerSafety__info > .containerSafety__info-text > h2 > span{
+.containerSafety__info > .containerSafety__info-text > h2 > span {
   margin-top: 0rem;
   margin-bottom: 0rem;
   font-size: 2.5rem;
@@ -730,32 +730,37 @@ margin: 0px;
   font-weight: 600;
 }
 
-.containerSafety__info > .containerSafety__info-text > h2{
+.containerSafety__info > .containerSafety__info-text > h2 {
   font-weight: normal;
   font-size: 2rem;
   line-height: 2rem;
-  margin: 10px
+  margin: 10px;
 }
 
-.containerSafety__info-text > p{
+.containerSafety__info-text > p {
   font-weight: normal;
   color: var(--TextColorMedium);
   padding: 0px;
   margin: 0px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
-.containerSafety__info > .containerSafety__list{
+.containerSafety__info > .containerSafety__list {
   display: flex;
   gap: 20px;
   margin-top: 20px;
   width: 100%;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-
-
-.containerSafety__list > .containerSafety__item{
-  width: 40%;
+.containerSafety__list > .containerSafety__item {
+  width: 35%;
   border: 1px solid white;
   border-radius: 1rem;
   display: flex;
@@ -764,6 +769,7 @@ margin: 0px;
   flex-direction: column;
   padding: 20px;
   text-align: center;
+  min-height: 220px;
 }
 
 .containerSafety__item > p > span {
@@ -771,21 +777,69 @@ margin: 0px;
   font-weight: bold;
 }
 
+@media (max-width: 1024px) {
+  .containerSafety__info-text > p {
+    font-size: 1rem;
+  }
+
+  .containerSafety__info > .containerSafety__info-text > h2 {
+    font-size: 1.8rem;
+  }
+
+  .containerSafety__info > .containerSafety__info-text > h2 > span {
+    font-size: 2rem;
+  }
+}
+
 @media (max-width: 768px) {
-  .containerSafety{
+  .containerSafety {
     flex-direction: column;
     gap: 20px;
     margin-top: 200px;
   }
 
-  
-.containerSafety__title {
-  width: 100%;
+  .containerSafety__title {
+    width: 100%;
+  }
+
+  .containerSafety__info {
+    width: 100%;
+  }
 }
 
-.containerSafety__info{
-  width: 100%;
-}
+@media (max-width: 668px) {
+  .containerSafety__info {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .containerSafety__list {
+    max-height: fit-content;
+    justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+  }
+
+  .containerSafety__info-text > p {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .containerSafety__info > .containerSafety__info-text > h2 {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .containerSafety__info > .containerSafety__info-text > h2 > span {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .containerSafety__item{
+    width: 80% !important;
+  }
 }
 
 /* Family */
@@ -1912,7 +1966,7 @@ margin: 0px;
   margin-bottom: 40px;
 }
 
-.containerFooter__love{
+.containerFooter__love {
   display: flex;
   width: 100%;
   text-align: left;
@@ -1934,9 +1988,7 @@ margin: 0px;
   justify-content: center;
 }
 
-
-
-.containerFooter__item{
+.containerFooter__item {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -1944,18 +1996,17 @@ margin: 0px;
   justify-content: center;
 }
 
-.containerFooter__item > a > img{
+.containerFooter__item > a > img {
   max-width: 140px;
   width: 100%;
 }
 
 .containerCopyrigth > span > img {
-
   width: 20px;
   height: auto;
 }
 
-.containerCopyrigth > .containerCopyrigth__item{
+.containerCopyrigth > .containerCopyrigth__item {
   margin-bottom: 0px;
 }
 
@@ -1967,7 +2018,7 @@ margin: 0px;
     justify-content: center;
   }
 
-  .containerFooter__logo{
+  .containerFooter__logo {
     margin-bottom: 8px;
   }
 }
@@ -2016,7 +2067,7 @@ margin: 0px;
     flex-direction: column;
   }
 
-  .containerFooter__love{
+  .containerFooter__love {
     align-items: center;
     justify-content: center;
     margin-top: 20px;
@@ -2030,5 +2081,4 @@ margin: 0px;
     padding: 0px;
     height: max-content;
   }
-
 }
