--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1954,7 +1954,8 @@
 .containerCopyrigth {
   display: flex;
   gap: 12px;
-  flex-direction: column;
+
+  flex-direction: column !important;
 }
 
 .containerCopyrigth > span {
