--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -11,7 +11,7 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modal-content {
+.modal-content, .modal-content2{
   background-color: #161616;
   border: 1px solid hsla(0, 0%, 100%, 0.05);
   width: 80%;
@@ -26,7 +26,8 @@
   padding-bottom: 40px;
 }
 
-.modal-content .scroll > p {
+
+.modal-content .scroll > p , .modal-content2 .scroll > p{
   width: 100%;
   margin: 0 auto;
   margin-top: 20px;
@@ -64,7 +65,7 @@
   }
 }
 
-.closeBtn {
+.closeBtn, .closeBtn2 {
   color: #aaa;
   float: right;
   font-size: 28px;
@@ -72,7 +73,8 @@
 }
 
 .closeBtn:hover,
-.closeBtn:focus {
+.closeBtn:focus, .closeBtn2:hover,
+.closeBtn2:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
