--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -156,6 +156,20 @@
   width: 80%;
 }
 
+.containerPlayer > p {
+  width: calc(100% - 40px);
+  text-align: center;
+  background-color: #0e0e18;
+  margin: 0px;
+  font-size: 1.2rem;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 0px 0px 1rem 1rem;
+  text-shadow: 0 0 3px #ff0000, 0 0 6px #ff0000, 0 0 9px #ff0000,
+    0 0 12px #ff0000, 0 0 15px #ff0000, 0 0 18px #ff0000, 0 0 21px #ff0000;
+}
+
 /* container Info */
 
 .containerInfo {
@@ -1134,6 +1148,8 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .containerServicesInfo__image > img {
@@ -1141,6 +1157,7 @@
   border: 2px dashed white;
   border-radius: 50%;
   animation: pulse2 3s ease infinite;
+
 }
 
 .containerServicesInfo__image > .purple {
@@ -1893,11 +1910,12 @@
   margin: 0 auto;
   margin-top: 100px;
 }
+
 .containerFooter__infos {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   margin: 0 auto;
 }
 
@@ -1939,7 +1957,7 @@
   flex-direction: column;
   text-align: center;
   gap: 5px;
-  height: 110px;
+  height: 170px
 }
 
 .containerFooter__list > li > a {
@@ -2016,6 +2034,22 @@
   margin-bottom: 0px;
 }
 
+.hiddenApp{
+  visibility: hidden;
+}
+
+.hiddenDektop{
+  visibility: visible;
+  list-style: none;
+  height: 170px;
+  
+}
+
+.hiddenDektop > h2 {
+  margin: 0px;
+  margin-bottom: 14px;
+}
+
 @media (max-width: 825px) {
   .containerCopyrigth {
     margin-top: 20px;
@@ -2033,6 +2067,16 @@
   .containerFooter__infos {
     flex-direction: column;
   }
+
+  .hiddenApp{
+    display: flex;
+    visibility: visible;
+  }
+
+  .hiddenDektop{
+    display: none;
+  }
+  
 
   .containerFooter__list {
     width: 100%;
@@ -2055,6 +2099,7 @@
 
   .containerFooter__list > li > h2 {
     font-size: 1rem;
+    text-align: left;
   }
   .containerFooter__list > li > a {
     font-size: 0.8rem;
