--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -389,6 +389,8 @@
   line-height: 5.25rem;
   font-weight: 600;
   letter-spacing: -1px;
+  text-shadow: 0 0 3px #f40051, 0 0 6px #f40051, 0 0 9px #f40051,
+  0 0 12px #f40051, 0 0 15px #f40051, 0 0 18px #f40051, 0 0 21px #f40051;
 }
 
 .containarPlans__item {
@@ -441,6 +443,11 @@
 
 .containarPlans__price > .price {
   font-size: 4.5rem;
+}
+
+.containarPlans__price > .price > span {
+  font-family: "Pacifico", cursive;
+  font-weight: 700;
 }
 
 .containarPlans__price > span {
@@ -2297,7 +2304,7 @@
   margin-top: 40px;
 }
 
-.containerButtonBuy_button{
+.containerButtonBuy_button {
   display: flex;
   padding: 0.75rem 1.25rem;
   flex-direction: row;
