--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -202,6 +202,8 @@
   line-height: 5.25rem;
   font-weight: 600;
   letter-spacing: -1px;
+  text-shadow: 0 0 3px #f40051, 0 0 6px #f40051, 0 0 9px #f40051,
+  0 0 12px #f40051, 0 0 15px #f40051, 0 0 18px #f40051;
 }
 
 .containerInfo > p {
