--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -203,7 +203,7 @@
   font-weight: 600;
   letter-spacing: -1px;
   text-shadow: 0 0 3px #f40051, 0 0 6px #f40051, 0 0 9px #f40051,
-  0 0 12px #f40051, 0 0 15px #f40051, 0 0 18px #f40051;
+    0 0 12px #f40051, 0 0 15px #f40051, 0 0 18px #f40051;
 }
 
 .containerInfo > p {
@@ -409,7 +409,7 @@
   border: 2px solid rgba(120, 140, 160, 0.4);
   background-color: hsla(0, 0%, 100%, 0.05);
   border-radius: 1rem;
-  width: 100%;
+  width: 50%;
   height: fit-content;
 }
 
@@ -591,10 +591,7 @@
     padding-top: 0px;
     line-height: 1px;
     margin-bottom: 35px;
-  
   }
-
- 
 
   .containarPlans__price > span {
     font-size: 1.8rem;
@@ -888,6 +885,7 @@
   min-height: 650px;
   gap: 25px;
   margin-top: 80px;
+  justify-content: space-between;
 }
 
 .containerSafety__title > h2 {
@@ -901,8 +899,11 @@
 }
 
 .containerSafety__title > img {
-  height: 100%;
   width: 100%;
+  border-radius: 1rem;
+  width: 100%;
+  height: 545px;
+  max-height: 545px;
   border-radius: 1rem;
 }
 
