--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -189,3 +189,71 @@
   }
  
 }
+
+
+@keyframes modalOpen2 {
+  from {
+    height: 0px;
+  }
+  to {
+    height: 90px;
+  }
+}
+
+@keyframes modalClose2 {
+  from {
+    height: 90px;
+  }
+  to {
+    height: 0px;
+  }
+}
+
+
+.modalApp {
+  background-color: #161616;
+  border: 1px solid hsla(0, 0%, 100%, 0.05);
+  width: 300px;
+  animation-name: modalOpen2;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in;
+  transition: all 0.3s;
+  border-radius: 1rem;
+  overflow: hidden !important;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  position: absolute;
+}
+
+.modalAppLeave{
+  animation-name: modalClose2;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in;
+  overflow: hidden !important;
+}
+
+.closeBtn4 {
+  background-color: transparent;
+  border: none;
+  cursor: default;
+  text-align: end;
+}
+
+.closeBtn4 > p {
+  color: #1C50EB;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+  left: 100px;
+  top: 0px;
+}
+
+.closeBtn4 > p:hover {
+  color: #1e49ca9f;
+}
